fix button alignment of update and create place forms

--- a/frontend-react/src/components/places/PlaceUpdateForm.css
+++ b/frontend-react/src/components/places/PlaceUpdateForm.css
@@ -1,6 +1,10 @@
 @layer components {
-    form.place-update {
+    .place-update {
         @apply relative w-[90%] max-w-160 my-0 mx-auto p-4;
         @apply list-none shadow-md rounded-md bg-surface;
+    }
+
+    .place-update .buttons {
+        @apply mt-10 text-right;
     }
 }
